# Market_EXE

./: .gitignore  CMakeLists.txt  CODEBASE_EXPLAINER.md  INTERVIEW_TASK.md  Logger.h  PROJECT_PROGRESS.md  README.md  readme.md  vcpkg.json
Application/: client.cfg
Application/OHLC_price_data_1/: EURUSD_10s.csv  EURUSD_15s.csv  EURUSD_1m.csv  EURUSD_1s.csv  EURUSD_30s.csv  EURUSD_5m.csv  EURUSD_5s.csv  GBPUSD_10s.csv  GBPUSD_15s.csv  GBPUSD_1m.csv  GBPUSD_1s.csv  GBPUSD_30s.csv  GBPUSD_5m.csv  GBPUSD_5s.csv  USDJPY_10s.csv  USDJPY_15s.csv  USDJPY_1m.csv  USDJPY_1s.csv  USDJPY_30s.csv  USDJPY_5m.csv  USDJPY_5s.csv
Application/OHLC_price_data_2/: EURUSD_10s.csv  EURUSD_15s.csv  EURUSD_1m.csv  EURUSD_1s.csv  EURUSD_30s.csv  EURUSD_5s.csv  GBPUSD_10s.csv  GBPUSD_15s.csv  GBPUSD_1m.csv  GBPUSD_1s.csv  GBPUSD_30s.csv  GBPUSD_5s.csv  USDJPY_10s.csv  USDJPY_15s.csv  USDJPY_1m.csv  USDJPY_1s.csv  USDJPY_30s.csv  USDJPY_5s.csv
Application/frontend/: app.js  index.css  index.html
Application/store/: FIX.4.4-CLIENT1-SERVER1.body  FIX.4.4-CLIENT1-SERVER1.header  FIX.4.4-CLIENT1-SERVER1.seqnums  FIX.4.4-CLIENT1-SERVER1.session  FIX.4.4-CLIENT2-SERVER1.body  FIX.4.4-CLIENT2-SERVER1.header  FIX.4.4-CLIENT2-SERVER1.seqnums  FIX.4.4-CLIENT2-SERVER1.session  FIX.4.4-SERVER1-CLIENT1.body  FIX.4.4-SERVER1-CLIENT1.header  FIX.4.4-SERVER1-CLIENT1.seqnums  FIX.4.4-SERVER1-CLIENT1.session
MarketDataClient/: FIXMarketDataApp.h  OHLCBarAggregator.h  client.cfg  main.cpp
MarketDataSimulator/: market_data_simulator.cpp  server.cfg
bits/: stdc++.h
